<resources>
    <string name="app_name">VroomVroom</string>
    <string name="hello_blank_fragment">Hello from blank fragment</string>
    <string name="snackbar_no_connection">You are currently not connected to any network</string>
    <string name="maps_alert_dialog_title">Sorry</string>
    <string name="maps_range_error_message">The given address is outside of our delivery range. Order might not be accepted</string>
    <string name="maps_invalid_address">The given address is not valid. Make sure to mark the correct location.</string>
    <string name="maps_alert_dialog_cancel">Cancel</string>
    <string name="maps_alert_dialog_understood">Understood</string>
    <string name="maps_alert_dialog_proceed">Proceed</string>
    <string name="placed_order_title">Success!</string>
    <string name="placed_order_message">You have successfully placed order!</string>
    <string name="creating_dialog_message">Creating order…</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDCtiSPULjYWEZ5Ly9bB1G3WRQrg6ubeDI</string>
    <string name="facebook_app_id">593283722014887</string>
    <string name="fb_login_protocol_scheme">fb593283722014887</string>
    <string name="facebook_client_token">dd589d0b733000634328ead72eeec53b</string>
    <string name="special_instructions">Special Instructions</string>
    <string name="delivery_address">Delivery address</string>
    <string name="to_check_out">Go to checkout</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="subtotal">Subtotal</string>
    <string name="change_address">Change address</string>
    <string name="street_not_provided">Street not provided</string>
    <string name="city_not_provided">City not provided</string>
    <string name="delivery">Delivery</string>
    <string name="quantity">Quantity</string>
    <string name="cart">Cart</string>
    <string name="clear_cart">Clear Cart</string>
    <string name="proceed">Proceed</string>
    <string name="clear_cart_message">You have cart from different store.\nIf you continue your cart will be removed.</string>
    <string name="retry">Retry</string>
    <string name="cart_fab_detail">Item %1$d (₱%2$s)</string>
    <string name="closed_alert_label">Store is closed. Please comeback \ntomorrow (%1$s)</string>
    <string name="unsaved_error">Unable to save your information. Please try again</string>
    <string name="we_had_some_trouble_connecting_nbut_should_have_you_eat_shortly">We had some trouble connecting,\nbut should have you eat shortly.</string>
    <string name="sorry_for_the_delay">Sorry for the delay</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="add_items">Add items</string>
    <string name="login_or_sign_up">Login or Sign up</string>
    <string name="add_mobile_number">Add mobile number</string>
    <string name="confirm_address">Confirm address</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="place_order">Place Order • ₱%s</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_email">Continue with Email Address</string>
    <string name="add_a_new_address">Add a new address</string>
    <string name="current_location">Current Location</string>
    <string name="update_address">Update address</string>
    <string name="payment_method">Payment method</string>
    <string name="add_a_payment_method">Add a payment method</string>
    <string name="checkout">Checkout</string>
    <string name="terms_and_policy">By continuing, you agree to our &lt;a href=\"https://vroomvroom.store/en/content/termsandconditions\"&gt;Terms and Conditions&lt;/a&gt; and &lt;a href=\"https://vroomvroom.store/en/page/admin/privacypolicy\"&gt;Privacy Policy&lt;/a&gt;.</string>
    <string name="already_have_an_account_login">Already have an account? <font fgcolor="#A30000"><u>Log In</u></font></string>
    <string name="resend_email">Didn\'t receive code? <font fgcolor="#A30000"><u>Resend</u></font></string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="otp">OTP</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_an_account_signup">Don\'t have an account? <font fgcolor="#A30000"><u>Sign Up</u></font></string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_email">Send reset email</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="payment_methods">Choose method</string>
    <string name="gcash">GCash</string>
    <string name="verification">Verify Your Number</string>
    <string name="we_will_send_you_an_otp_on_this_mobile_number">We will send you an OTP on this mobile.</string>
    <string name="ph_phone_code">+63</string>
    <string name="phone_placeholder">931xxxxxxx</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_the_otp_sent_to">We have sent you an OTP for\nphone number verification.</string>
    <string name="_041499">041499</string>
    <string name="didn_t_receive_the_otp_resend">Didn\'t receive the OTP? <font fgcolor="#A30000"><u>Resend</u></font></string>
    <string name="verify">Verify OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="_4_8_12_rating">4.8 (12 rating)</string>
    <string name="open_until_7_30_pm">Open Until 7:30 PM</string>
    <string name="empty_cart">Empty Cart</string>
    <string name="empty_result">Empty Result</string>
    <string name="empty_order">No orders yet</string>
    <string name="empty_cart_message">Once you add items from a store,\nit will appear here.</string>
    <string name="empty_order_message">Once you place your orders, it will appear here.</string>
    <string name="empty_result_message">We couldn\'t find any store for search \"<![CDATA[<b>%s</b>]]>\".</string>
    <string name="start_shopping">Start shopping</string>
    <string name="error_message">We had some trouble connecting,\nbut should have you eating shortly.</string>
    <string name="preorder">Preorder</string>
    <string name="main_categories">Main Categories</string>
    <string name="all_shops">All Stores</string>
    <string name="pending">Pending</string>
    <string name="confirmed">Confirmed</string>
    <string name="delivered">Delivered</string>
    <string name="home">Home</string>
    <string name="browse">Browse</string>
    <string name="orders">Orders</string>
    <string name="profile">Profile</string>
    <string name="to_receive">To Receive</string>
    <string name="creating_order">Creating order…</string>
    <string name="loading">Loading…</string>
    <string name="sending">Sending…</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="dismiss">Dismiss</string>
    <string name="view_all">View All</string>
    <string name="view_order">View Order</string>
    <string name="one">1</string>
    <string name="okay">Okay</string>
    <string name="ok">OK</string>
    <string name="empty_favorite">Empty favorites</string>
    <string name="empty_favorite_detail">You don\'t have any favorites yet.</string>
    <string name="image">image</string>
    <string name="total">Total</string>
    <string name="confirmed_notification_content">Your order has been confirmed and assigned to the delivery rider.</string>
    <string name="to_receive_notification_content">Your order is on the way for delivery. The rider will contact you soon.</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="additional_information">Additional Information (Optional) </string>
    <string name="save_and_continue">Save and continue</string>
    <string name="continue_word">Continue</string>
    <string name="we_re_missing_your_street">Missing Street</string>
    <string name="add_new_address">Add New Address</string>
    <string name="addresses">Addresses</string>
    <string name="favorites">Favorites</string>
    <string name="about">About</string>
    <string name="support">Support</string>
    <string name="logout">Log Out</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="verified">Verified</string>
    <string name="account">Account</string>
    <string name="edit_account_name">Edit Name</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="remove">Remove</string>
    <string name="cancellation_reason">Cancellation Reason</string>
    <string name="change_payment_method">Change payment method</string>
    <string name="change_information">I want to change my information</string>
    <string name="change_combine_order">Change/combine order</string>
    <string name="duplicate_order">Duplicate order</string>
    <string name="i_change_my_mind">I change my mind</string>
    <string name="confirm">Confirm</string>
    <string name="cancelled">Cancelled</string>
    <string name="add">Add</string>
    <string name="enter_my_location">Enter my location</string>
    <string name="allow_location_access">Allow Location Access</string>
    <string name="we_will_need_your_location_to_ngive_you_better_experience">We will need your location to\ngive you better experience.</string>
    <string name="allow_your_location">Allow your location</string>
    <string name="reviews">Reviews</string>
    <string name="write_review">Write Review</string>
    <string name="dislike">Dislike</string>
    <string name="like">Like</string>
    <string name="share_your_thoughts">Share us your thoughts</string>
    <string name="submit">Submit</string>
    <string name="search_for_shop_restaurant">Search for shops &amp; restaurants</string>
    <string name="search_location">Search location</string>
    <string name="all_categories">All Categories</string>
    <string name="terms_and_conditions">Terms &amp; Conditions</string>
    <string name="about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="contact_us">Contact Us</string>
    <string name="faqs">FAQ\'s</string>
    <string name="logout_failed">Logout Failed</string>
    <string name="auth_failed">Authentication Failed</string>
    <string name="general_error_message">Something went wrong</string>
    <string name="network_error">Network Error</string>
    <string name="unable_to_load_data">Unable to load data</string>
    <string name="verification_failed">Verification Failed</string>
    <string name="invalid_email_address">Invalid Email Address</string>
    <string name="otp_invalid">Please input OTP</string>
    <string name="invalid_password">Passwords don\'t match</string>
    <string name="login_failed">Login Failed</string>
    <string name="network_error_message">Please check your internet connection and try again.</string>
    <string name="verification_error_message">The code you entered is incorrect. Please try again</string>
    <string name="about_us_link">https://vroomvroom.store/en/content/aboutus</string>
    <string name="terms_and_conditions_link">https://vroomvroom.store/en/content/termsandconditions</string>
    <string name="privacy_policy_link">https://vroomvroom.store/en/page/admin/privacypolicy</string>
    <string name="contact_us_link">https://vroomvroom.store/en/content/contactus</string>
    <string name="faqs_link">https://vroomvroom.store/en/content/Faqs</string>
    <string name="prompt">Prompt</string>
    <string name="congratulations">Congratulations!</string>
</resources>