<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/notice_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_gravity="center">

    <ImageView
        android:id="@+id/notice_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        tools:src="@drawable/ic_invoice"/>

    <TextView
        android:id="@+id/notice_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/empty_order"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/notice_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_large"
        android:layout_marginTop="@dimen/dp_8"
        android:textSize="16sp"
        tools:text="@string/network_error_message"
        android:textAlignment="center" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_notice"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_weight="1"
        android:layout_marginHorizontal="@dimen/margin_big"
        android:text="@string/retry"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:cornerRadius="@dimen/dp_24" />

</LinearLayout>